Enhance GPU support and performance logging across the application; update environment configurations and README for clarity

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/sentisight
-POSTGRES_USER=sentisight_user
-POSTGRES_PASSWORD=your_secure_password
+DATABASE_URL=postgresql://postgres:The.punisher455@localhost:5432/sentisight
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=The.punisher455
 POSTGRES_DB=sentisight
 
 # API Configuration
@@ -16,4 +16,4 @@ GOOGLE_API_KEY=your_google_gemini_key_here
 # Application Settings
 DEBUG=false
 LOG_LEVEL=INFO
-MAX_BATCH_SIZE=100
+MAX_BATCH_SIZE=1000
